--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es ">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El inicio</title>
+    <link rel="shorcut icon" href="img/logo.png">
+    <link rel="stylesheet" href="./estilos.css">
+    <title> LA TAQUERIA</title>
 </head>
-
 <body>
-    <h1>Es relleno</h1>
-    <h2>wilber</h2>
+    <img src="img/logo.png" alt="">
 </body>
 
 </html>
