agregue el logo entre otras coas

--- a/index.html
+++ b/index.html
@@ -8,9 +8,29 @@
     <link rel="shorcut icon" href="img/logo.png">
     <link rel="stylesheet" href="./estilos.css">
     <title> LA TAQUERIA</title>
+    <script src="https://kit.fontawesome.com/bf58fef3d5.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <img src="img/logo.png" alt="">
-</body>
 
+    <!-- CABECERA DE LA WEB -->
+    <header id="cajacabecera">
+        <div id="cabecera"> 
+            <img id="logo" src="img/logo.png" alt="logotaqueria">
+            <input type="checkbox" id="btn-menu">
+            <label for="btn-menu" class="fa-solid fa-bars" id="mmovil">
+            </label>
+            <nav class="menu">
+            
+             <ul>
+                 <li id="registro"><a  href="#p-Registrarse"></a>Registrarse</li>
+                 <li id="iniciar"><a href="#p-Iniciar sesion"></a>Iniciar sesion</li>
+                 <li><a href="#p-Contactenos"></a>Contactenos</li>
+                 <li><a href="#p-Ordenar"></a>Ordenar</li>
+                 <li><a href="#p-Buscar"></a>Buscar</li>
+             </ul>
+            </nav>
+        </div>
+    </header>
+</body>
+    
 </html>
